Fixed responsive layout problems.
Added sticky position for mobile

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ html {
   font-family: 'Sen', sans-serif;
 }
 
-*, *:before, *:after {
+*, *::before, *::after {
   box-sizing: inherit;
 }
 
